# moosage

./: Cargo.toml  README.md
moosage/: Cargo.toml
moosage-client/: Cargo.toml
moosage-client/src/: chatter.rs  main.rs
moosage-common/: Cargo.toml  build.rs
moosage-common/proto/chat/: chat_service.proto
moosage-common/src/: lib.rs
moosage/src/: chatter.rs  main.rs
proto/chat/: chat_service.proto
