[package]
name = "moosage-client"
version = "0.1.0"
authors = ["Kuba Clark <jakub.clark@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moosage-common = { path = "../moosage-common" }
tokio = { version = "~0.2", features = ["macros", "rt-threaded"] }
tonic = "~0.2"
anyhow = "~1.0"
uuid = { version = "~0.8", features = ["v4"] }