[package]
name = "moosage-server"
version = "0.1.0"
authors = ["Kuba Clark <jakub.clark@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moosage-common = { path = "../moosage-common" }
tokio = { version = "0.2", features = ["macros", "sync", "rt-threaded"] }
tonic = "0.2.0"
futures-core = "0.3.4"
async-stream = "0.2.1"
